Refactor bot loop and scanner for improved modularity and performance
- Split candidate scanning logic into a new `scanner.ts` module for better organization.
- Introduced a caching mechanism for Jupiter quotes to reduce redundant API calls.
- Enhanced the `scanAndMaybeExecute` function to utilize the new scanning logic and cache.
- Added concurrency control for processing pairs in the main execution loop.
- Implemented a lookup table cache to optimize address lookup table retrieval.
- Updated environment configuration to support new parameters related to Jito tips and caching.
- Refactored wallet setup to streamline associated token account creation.

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,25 @@ BASE_FEE_LAMPORTS=5000
 RENT_BUFFER_LAMPORTS=0
 COMPUTE_UNIT_LIMIT=1400000
 COMPUTE_UNIT_PRICE_MICRO_LAMPORTS=0
+QUOTE_CACHE_TTL_MS=250
+LUT_CACHE_TTL_MS=60000
+PAIR_CONCURRENCY=2
+MIN_BALANCE_LAMPORTS=0
+MAX_ERRORS_BEFORE_EXIT=0
+MAX_CONSECUTIVE_ERRORS_BEFORE_EXIT=0
+AUTO_SETUP_WALLET=false
+
+# Jito (optional, for MODE=live)
+JITO_ENABLED=false
+JITO_BLOCK_ENGINE_URL=https://amsterdam.mainnet.block-engine.jito.wtf
+JITO_TIP_LAMPORTS=10000
+JITO_TIP_MODE=fixed
+JITO_MIN_TIP_LAMPORTS=5000
+JITO_MAX_TIP_LAMPORTS=50000
+JITO_TIP_BPS=2000
+JITO_WAIT_MS=0
+JITO_FALLBACK_RPC=false
+JITO_TIP_ACCOUNT=
 
 # Jupiter
 JUP_SWAP_BASE_URL=https://api.jup.ag
