--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "@solana/spl-token": "^0.4.9",
     "@solana/web3.js": "^1.98.4",
     "bs58": "^6.0.0",
     "dotenv": "^16.4.7",
+    "jito-ts": "^4.2.1",
     "zod": "^3.24.1"
+  },
+  "overrides": {
+    "jito-ts": {
+      "@solana/web3.js": "^1.98.4"
+    }
   },
   "devDependencies": {
     "@types/node": "^22.10.7",
