feat: add support for triangular arbitrage and live preflight simulation
- Updated README.md to include new variables for triangular arbitrage and live preflight simulation.
- Modified config.example.json to support slippage settings for triangular arbitrage.
- Refactored atomic.ts to handle multiple legs in transactions for triangular arbitrage.
- Updated executor.ts to support triangular candidates and live preflight simulation.
- Enhanced scanner.ts to identify triangular arbitrage opportunities and log relevant data.
- Added new configuration options for slippage and dex filtering in lib/config.ts.
- Introduced new example configuration for triangular arbitrage in config.triangular.example.json.
- Improved HTTP request handling in lib/http.ts to support multiple dex filters.
- Updated jupiter API types to include dex filtering options.
- Created a technical guide for building a Solana arbitrage bot, detailing architecture and integration with Titan, Kamino, and Jupiter.

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ POLL_INTERVAL_MS=500
 EXECUTION_STRATEGY=atomic
 DRY_RUN_BUILD=true
 DRY_RUN_SIMULATE=false
+LIVE_PREFLIGHT_SIMULATE=true
 LOG_PATH=./logs/events.jsonl
 BASE_FEE_LAMPORTS=5000
 RENT_BUFFER_LAMPORTS=0
