feat: enhance priority fee estimation and support for Jupiter v6 API

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # Required
 SOLANA_RPC_URL=https://api.mainnet-beta.solana.com
+SOLANA_WS_URL=
+SOLANA_COMMITMENT=confirmed
 WALLET_SECRET_KEY=
 
 # Bot
@@ -10,6 +12,14 @@ EXECUTION_STRATEGY=atomic
 DRY_RUN_BUILD=true
 DRY_RUN_SIMULATE=false
 LIVE_PREFLIGHT_SIMULATE=true
+PRIORITY_FEE_STRATEGY=off
+PRIORITY_FEE_LEVEL=recommended
+PRIORITY_FEE_REFRESH_MS=1000
+PRIORITY_FEE_MAX_MICRO_LAMPORTS=50000000
+PRIORITY_FEE_TARGET_ACCOUNT_LIMIT=16
+PRIORITY_FEE_WITH_JITO=false
+HELIUS_API_KEY=
+HELIUS_RPC_URL=https://mainnet.helius-rpc.com
 LOG_PATH=./logs/events.jsonl
 BASE_FEE_LAMPORTS=5000
 RENT_BUFFER_LAMPORTS=0
