feat: integrate OpenOcean client for enhanced trading strategies
- Added OpenOceanClient to facilitate quotes and swaps with OpenOcean API.
- Implemented MintDecimalsCache to cache mint decimals for efficient retrieval.
- Enhanced scanPair function to utilize OpenOcean for loop trading candidates.
- Introduced new trigger strategies: 'avg-window' and 'bollinger' for dynamic trading execution.
- Updated scanAndMaybeExecute to support new trigger strategies and parameters.
- Added rate limiting to OpenOcean API calls to prevent excessive requests.
- Updated environment configuration to include OpenOcean settings.
- Enhanced logging for OpenOcean trading activities and errors.

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,17 @@ MODE=dry-run
 CONFIG_PATH=./config.json
 POLL_INTERVAL_MS=500
 EXECUTION_STRATEGY=atomic
+TRIGGER_STRATEGY=immediate
+TRIGGER_OBSERVE_MS=30000
+TRIGGER_OBSERVE_INTERVAL_MS=1000
+TRIGGER_EXECUTE_MS=10000
+TRIGGER_EXECUTE_INTERVAL_MS=500
+TRIGGER_BOLLINGER_K=1.5
+TRIGGER_EMA_ALPHA=0
+TRIGGER_BOLLINGER_MIN_SAMPLES=10
+TRIGGER_MOMENTUM_LOOKBACK=2
+TRIGGER_TRAIL_DROP_BPS=1
+TRIGGER_EMERGENCY_SIGMA=0
 DRY_RUN_BUILD=true
 DRY_RUN_SIMULATE=false
 LIVE_PREFLIGHT_SIMULATE=true
@@ -52,6 +63,13 @@ JUP_SWAP_BASE_URL=https://api.jup.ag
 JUP_ULTRA_BASE_URL=https://api.jup.ag
 JUP_API_KEY=
 JUP_USE_ULTRA=false
+
+# OpenOcean (optional; public API has strict rate limit ~2 RPS)
+OPENOCEAN_ENABLED=false
+OPENOCEAN_BASE_URL=https://open-api.openocean.finance/v4/solana
+OPENOCEAN_API_KEY=
+OPENOCEAN_GAS_PRICE=5
+OPENOCEAN_MIN_INTERVAL_MS=600
 
 # Optional hybrid mode: use Rust decision engine (requires building `rust/arb_calc`)
 USE_RUST_CALC=false
