feat: enhance trading bot configuration with OpenOcean integration and rate limiting

--- a/.env.example
+++ b/.env.example
@@ -20,8 +20,11 @@ TRIGGER_BOLLINGER_MIN_SAMPLES=10
 TRIGGER_MOMENTUM_LOOKBACK=2
 TRIGGER_TRAIL_DROP_BPS=1
 TRIGGER_EMERGENCY_SIGMA=0
+TRIGGER_AMOUNT_MODE=fixed
+TRIGGER_MAX_AMOUNTS_PER_TICK=1
 DRY_RUN_BUILD=true
 DRY_RUN_SIMULATE=false
+DRY_RUN_INCLUDE_JITO_TIP=false
 LIVE_PREFLIGHT_SIMULATE=true
 PRIORITY_FEE_STRATEGY=off
 PRIORITY_FEE_LEVEL=recommended
@@ -63,13 +66,21 @@ JUP_SWAP_BASE_URL=https://api.jup.ag
 JUP_ULTRA_BASE_URL=https://api.jup.ag
 JUP_API_KEY=
 JUP_USE_ULTRA=false
+JUP_MIN_INTERVAL_MS=150
+JUP_BACKOFF_MAX_ATTEMPTS=4
+JUP_BACKOFF_BASE_MS=250
+JUP_BACKOFF_MAX_MS=5000
 
-# OpenOcean (optional; public API has strict rate limit ~2 RPS)
+# OpenOcean (optional; public API has strict rate limit ~1-2 RPS and may ban on 429)
 OPENOCEAN_ENABLED=false
 OPENOCEAN_BASE_URL=https://open-api.openocean.finance/v4/solana
 OPENOCEAN_API_KEY=
 OPENOCEAN_GAS_PRICE=5
-OPENOCEAN_MIN_INTERVAL_MS=600
+OPENOCEAN_MIN_INTERVAL_MS=1200
+OPENOCEAN_OBSERVE_ENABLED=false
+OPENOCEAN_EXECUTE_ENABLED=true
+OPENOCEAN_EVERY_N_TICKS=2
+OPENOCEAN_JUPITER_GATE_BPS=-250
 
 # Optional hybrid mode: use Rust decision engine (requires building `rust/arb_calc`)
 USE_RUST_CALC=false
