--- a/config.example.json
+++ b/config.example.json
@@ -8,7 +8,8 @@
       "amountASteps": ["500000", "1000000", "2000000"],
       "slippageBps": 50,
       "slippageBpsLeg2": 100,
-      "minProfitA": "10000",
+      "minProfitA": "0",
+      "minProfitBps": 25,
       "cooldownMs": 1500,
       "computeUnitLimit": 1400000,
       "computeUnitPriceMicroLamports": 0,
