feat: add support for VWAP trigger strategy and enhance OpenOcean fee estimation

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ MODE=dry-run
 CONFIG_PATH=./config.json
 POLL_INTERVAL_MS=500
 EXECUTION_STRATEGY=atomic
+# immediate | avg-window | vwap | bollinger
 TRIGGER_STRATEGY=immediate
 TRIGGER_OBSERVE_MS=30000
 TRIGGER_OBSERVE_INTERVAL_MS=1000
@@ -77,6 +78,7 @@ OPENOCEAN_BASE_URL=https://open-api.openocean.finance/v4/solana
 OPENOCEAN_API_KEY=
 OPENOCEAN_GAS_PRICE=5
 OPENOCEAN_MIN_INTERVAL_MS=1200
+OPENOCEAN_SIGNATURES_ESTIMATE=3
 OPENOCEAN_OBSERVE_ENABLED=false
 OPENOCEAN_EXECUTE_ENABLED=true
 OPENOCEAN_EVERY_N_TICKS=2
