feat: add OpenOcean dex filtering and referrer support in configuration

--- a/.env.example
+++ b/.env.example
@@ -79,6 +79,12 @@ OPENOCEAN_API_KEY=
 OPENOCEAN_GAS_PRICE=5
 OPENOCEAN_MIN_INTERVAL_MS=1200
 OPENOCEAN_SIGNATURES_ESTIMATE=3
+# Optional: restrict OpenOcean routing by dex index (see `/v4/solana/dexList`; eg Jupiter=6, Titan=10)
+OPENOCEAN_ENABLED_DEX_IDS=
+OPENOCEAN_DISABLED_DEX_IDS=
+# Optional: tracking/fee program (note: `referrerFee` reduces your profitability)
+OPENOCEAN_REFERRER=
+OPENOCEAN_REFERRER_FEE=
 OPENOCEAN_OBSERVE_ENABLED=false
 OPENOCEAN_EXECUTE_ENABLED=true
 OPENOCEAN_EVERY_N_TICKS=2
