feat: add Docker support with logging rotation and enhance logger functionality

--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,9 @@ PRIORITY_FEE_WITH_JITO=false
 HELIUS_API_KEY=
 HELIUS_RPC_URL=https://mainnet.helius-rpc.com
 LOG_PATH=./logs/events.jsonl
+# Optional: rotate JSONL log file by size (0 disables)
+LOG_ROTATE_MAX_BYTES=10485760
+LOG_ROTATE_MAX_FILES=5
 BASE_FEE_LAMPORTS=5000
 RENT_BUFFER_LAMPORTS=0
 COMPUTE_UNIT_LIMIT=1400000
