feat: enhance environment configuration with bot profile and logging options

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ WALLET_SECRET_KEY=
 
 # Bot
 MODE=dry-run
+
+# default | hft
+# - hft: reduz logs (LOG_VERBOSE default=false) e restringe OpenOcean para evitar ban/rate-limit.
+BOT_PROFILE=default
 CONFIG_PATH=./config.json
 POLL_INTERVAL_MS=500
 EXECUTION_STRATEGY=atomic
@@ -36,6 +40,8 @@ PRIORITY_FEE_WITH_JITO=false
 HELIUS_API_KEY=
 HELIUS_RPC_URL=https://mainnet.helius-rpc.com
 LOG_PATH=./logs/events.jsonl
+# true = loga todos os candidates; false = loga apenas candidates lucrativos e pula eventos grandes (simulate)
+LOG_VERBOSE=true
 # Optional: rotate JSONL log file by size (0 disables)
 LOG_ROTATE_MAX_BYTES=10485760
 LOG_ROTATE_MAX_FILES=5
