--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "tsx src/index.ts",
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "sync-env": "node scripts/sync-env.mjs"
   },
   "dependencies": {
     "@solana/web3.js": "^1.98.4",
