feat: enhance Docker support and configuration for OpenOcean integration

--- a/.dockerignore
+++ b/.dockerignore
@@ -6,9 +6,10 @@ logs
 target
 tmp
 .env
+.env.production
 .env.bak*
+.env.production.bak*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-
