--- a/.env.production.example
+++ b/.env.production.example
@@ -1,19 +1,20 @@
+# PrimeAggregator - production example (no secrets)
+# Copy to `.env.production` and fill required values.
+
 # Required
-SOLANA_RPC_URL=https://api.mainnet-beta.solana.com
+SOLANA_RPC_URL=
 SOLANA_WS_URL=
-SOLANA_COMMITMENT=confirmed
+SOLANA_COMMITMENT=processed
 WALLET_SECRET_KEY=
 
 # Bot
-MODE=dry-run
+MODE=live
+BOT_PROFILE=hft
+CONFIG_PATH=/app/config.json
+POLL_INTERVAL_MS=200
 
-# default | hft
-# - hft: reduz logs (LOG_VERBOSE default=false) e restringe OpenOcean para evitar ban/rate-limit.
-BOT_PROFILE=default
-CONFIG_PATH=./config.json
-POLL_INTERVAL_MS=500
+# Execution (defaults; overridden per-service in docker-compose.prod.yml)
 EXECUTION_STRATEGY=atomic
-# immediate | avg-window | vwap | bollinger
 TRIGGER_STRATEGY=immediate
 TRIGGER_OBSERVE_MS=30000
 TRIGGER_OBSERVE_INTERVAL_MS=1000
@@ -27,11 +28,21 @@ TRIGGER_TRAIL_DROP_BPS=1
 TRIGGER_EMERGENCY_SIGMA=0
 TRIGGER_AMOUNT_MODE=fixed
 TRIGGER_MAX_AMOUNTS_PER_TICK=1
-DRY_RUN_BUILD=true
+
+# Safety
+LIVE_PREFLIGHT_SIMULATE=true
+MIN_BALANCE_LAMPORTS=0
+MAX_CONSECUTIVE_ERRORS_BEFORE_EXIT=25
+MAX_ERRORS_BEFORE_EXIT=0
+AUTO_SETUP_WALLET=false
+
+# Dry-run (keep off in production)
+DRY_RUN_BUILD=false
 DRY_RUN_SIMULATE=false
 DRY_RUN_INCLUDE_JITO_TIP=false
-LIVE_PREFLIGHT_SIMULATE=true
-PRIORITY_FEE_STRATEGY=off
+
+# Priority fees (optional; recommended when not using Jito)
+PRIORITY_FEE_STRATEGY=helius
 PRIORITY_FEE_LEVEL=recommended
 PRIORITY_FEE_REFRESH_MS=1000
 PRIORITY_FEE_MAX_MICRO_LAMPORTS=50000000
@@ -39,29 +50,31 @@ PRIORITY_FEE_TARGET_ACCOUNT_LIMIT=16
 PRIORITY_FEE_WITH_JITO=false
 HELIUS_API_KEY=
 HELIUS_RPC_URL=https://mainnet.helius-rpc.com
-LOG_PATH=./logs/events.jsonl
-# true = loga todos os candidates; false = loga apenas candidates lucrativos e pula eventos grandes (simulate)
-LOG_VERBOSE=true
-# Optional: rotate JSONL log file by size (0 disables)
+
+# Logging
+LOG_PATH=/app/logs/events.jsonl
+LOG_VERBOSE=false
 LOG_ROTATE_MAX_BYTES=10485760
 LOG_ROTATE_MAX_FILES=5
+
+# Fees/cost estimates
 BASE_FEE_LAMPORTS=5000
 RENT_BUFFER_LAMPORTS=0
 COMPUTE_UNIT_LIMIT=1400000
 COMPUTE_UNIT_PRICE_MICRO_LAMPORTS=0
+
+# Cache
 QUOTE_CACHE_TTL_MS=250
 LUT_CACHE_TTL_MS=60000
-PAIR_CONCURRENCY=2
-MIN_BALANCE_LAMPORTS=0
-MAX_ERRORS_BEFORE_EXIT=0
-MAX_CONSECUTIVE_ERRORS_BEFORE_EXIT=0
-AUTO_SETUP_WALLET=false
 
-# Jito (optional, for MODE=live)
+# Concurrency
+PAIR_CONCURRENCY=4
+
+# Jito (recommended for `jupiter-atomic`; overridden in docker-compose.prod.yml)
 JITO_ENABLED=false
 JITO_BLOCK_ENGINE_URL=https://amsterdam.mainnet.block-engine.jito.wtf
 JITO_TIP_LAMPORTS=10000
-JITO_TIP_MODE=fixed
+JITO_TIP_MODE=dynamic
 JITO_MIN_TIP_LAMPORTS=5000
 JITO_MAX_TIP_LAMPORTS=50000
 JITO_TIP_BPS=2000
@@ -71,8 +84,6 @@ JITO_TIP_ACCOUNT=
 
 # Jupiter
 JUP_SWAP_BASE_URL=https://api.jup.ag
-
-# Ultra Swap (optional; requires API key)
 JUP_ULTRA_BASE_URL=https://api.jup.ag
 JUP_API_KEY=
 JUP_USE_ULTRA=false
@@ -81,24 +92,21 @@ JUP_BACKOFF_MAX_ATTEMPTS=4
 JUP_BACKOFF_BASE_MS=250
 JUP_BACKOFF_MAX_MS=5000
 
-# OpenOcean (optional; public API has strict rate limit ~1-2 RPS and may ban on 429)
+# OpenOcean (Titan via dexId=10; overridden in docker-compose.prod.yml)
 OPENOCEAN_ENABLED=false
 OPENOCEAN_BASE_URL=https://open-api.openocean.finance/v4/solana
 OPENOCEAN_API_KEY=
 OPENOCEAN_GAS_PRICE=5
 OPENOCEAN_MIN_INTERVAL_MS=1200
 OPENOCEAN_SIGNATURES_ESTIMATE=3
-# NOTE: OpenOcean execution requires EXECUTION_STRATEGY=sequential
-# Optional: restrict OpenOcean routing by dex index (see `/v4/solana/dexList`; eg Jupiter=6, Titan=10)
-OPENOCEAN_ENABLED_DEX_IDS=
+OPENOCEAN_ENABLED_DEX_IDS=10
 OPENOCEAN_DISABLED_DEX_IDS=
-# Optional: tracking/fee program (note: `referrerFee` reduces your profitability)
 OPENOCEAN_REFERRER=
 OPENOCEAN_REFERRER_FEE=
 OPENOCEAN_OBSERVE_ENABLED=false
 OPENOCEAN_EXECUTE_ENABLED=true
 OPENOCEAN_EVERY_N_TICKS=2
-OPENOCEAN_JUPITER_GATE_BPS=-250
+OPENOCEAN_JUPITER_GATE_BPS=-50
 
 # Optional hybrid mode: use Rust decision engine (requires building `rust/arb_calc`)
 USE_RUST_CALC=false
