--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
       context: .
       dockerfile: Dockerfile
     image: prime-aggregator:local
+    init: true
     env_file:
       - .env
     environment:
@@ -13,6 +14,7 @@ services:
       - ./config.json:/app/config.json:ro
       - ./logs:/app/logs
     restart: unless-stopped
+    stop_grace_period: 30s
     logging:
       driver: json-file
       options:
