feat: enhance bot functionality with fee estimation and error handling, update environment configuration for minimum balance

--- a/.env.production.example
+++ b/.env.production.example
@@ -31,7 +31,8 @@ TRIGGER_MAX_AMOUNTS_PER_TICK=1
 
 # Safety
 LIVE_PREFLIGHT_SIMULATE=true
-MIN_BALANCE_LAMPORTS=0
+# Recomenda-se: `amountA` + buffer de fees/rent (ex: se `amountA=50000000` (~0.05 SOL), use >= `60000000`).
+MIN_BALANCE_LAMPORTS=60000000
 MAX_CONSECUTIVE_ERRORS_BEFORE_EXIT=25
 MAX_ERRORS_BEFORE_EXIT=0
 AUTO_SETUP_WALLET=false
