feat: enhance configuration for Ultra integration, add execution strategy notes, and update README instructions

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,9 @@ BOT_PROFILE=default
 CONFIG_PATH=./config.json
 POLL_INTERVAL_MS=500
 EXECUTION_STRATEGY=atomic
+# NOTE:
+# - OpenOcean execution requires `EXECUTION_STRATEGY=sequential`
+# - Ultra is sequential (2 tx) and requires pairs with `aMint=So111...` (SOL)
 # immediate | avg-window | vwap | bollinger
 TRIGGER_STRATEGY=immediate
 TRIGGER_OBSERVE_MS=30000
@@ -73,6 +76,9 @@ JITO_TIP_ACCOUNT=
 JUP_SWAP_BASE_URL=https://api.jup.ag
 
 # Ultra Swap (optional; requires API key)
+# Base URL for Ultra. Both of these work:
+# - https://api.jup.ag
+# - https://api.jup.ag/ultra
 JUP_ULTRA_BASE_URL=https://api.jup.ag
 JUP_API_KEY=
 JUP_USE_ULTRA=false
@@ -83,6 +89,8 @@ JUP_BACKOFF_MAX_MS=5000
 
 # OpenOcean (optional; public API has strict rate limit ~1-2 RPS and may ban on 429)
 OPENOCEAN_ENABLED=false
+# Tip: the bot normalizes this value, so you can also pass it without `https://`
+# (e.g. `open-api.openocean.finance/v4/solana`)
 OPENOCEAN_BASE_URL=https://open-api.openocean.finance/v4/solana
 OPENOCEAN_API_KEY=
 OPENOCEAN_GAS_PRICE=5
