--- a/.env.production.example
+++ b/.env.production.example
@@ -15,6 +15,9 @@ POLL_INTERVAL_MS=200
 
 # Execution (defaults; overridden per-service in docker-compose.prod.yml)
 EXECUTION_STRATEGY=atomic
+# NOTE:
+# - OpenOcean execution requires `EXECUTION_STRATEGY=sequential`
+# - Ultra is sequential (2 tx) and requires pairs with `aMint=So111...` (SOL)
 TRIGGER_STRATEGY=immediate
 TRIGGER_OBSERVE_MS=30000
 TRIGGER_OBSERVE_INTERVAL_MS=1000
@@ -85,6 +88,9 @@ JITO_TIP_ACCOUNT=
 
 # Jupiter
 JUP_SWAP_BASE_URL=https://api.jup.ag
+# Base URL for Ultra. Both of these work:
+# - https://api.jup.ag
+# - https://api.jup.ag/ultra
 JUP_ULTRA_BASE_URL=https://api.jup.ag
 JUP_API_KEY=
 JUP_USE_ULTRA=false
