feat: Enhance Jupiter integration for arbitrage bot
- Updated docker-compose configuration to support new execution modes (swap, ultra, dual).
- Refactored executor and loop logic to handle multiple Jupiter clients for quoting and executing trades.
- Introduced new environment variables for execution provider configuration.
- Improved error handling and logging for ultra execution paths.
- Added support for dual mode execution with OpenOcean integration.
- Updated scanner logic to streamline quote fetching and fee conversion.
- Enhanced caching and rate limiting for Jupiter API calls.
- Documented the architecture and implementation strategy for the arbitrage bot in a technical guide.

--- a/.env.production.example
+++ b/.env.production.example
@@ -87,17 +87,30 @@ JITO_FALLBACK_RPC=false
 JITO_TIP_ACCOUNT=
 
 # Jupiter
+# Quote base URL used for scanning and fee conversion (SOL -> aMint).
+# Defaults to `JUP_SWAP_BASE_URL`.
+JUP_QUOTE_BASE_URL=
 JUP_SWAP_BASE_URL=https://api.jup.ag
 # Base URL for Ultra. Both of these work:
 # - https://api.jup.ag
 # - https://api.jup.ag/ultra
 JUP_ULTRA_BASE_URL=https://api.jup.ag
 JUP_API_KEY=
+# Execution provider:
+# - swap  = build/execute via Jupiter swap APIs (supports atomic + sequential)
+# - ultra = execute via Ultra (sequential only; can be combined with OpenOcean in the same bot)
+JUP_EXECUTION_PROVIDER=swap
+# Backward-compat: if true, implies `JUP_EXECUTION_PROVIDER=ultra` (prefer the var above)
 JUP_USE_ULTRA=false
 JUP_MIN_INTERVAL_MS=150
 JUP_BACKOFF_MAX_ATTEMPTS=4
 JUP_BACKOFF_BASE_MS=250
 JUP_BACKOFF_MAX_MS=5000
+# Optional Ultra-specific rate limit overrides (defaults to the values above)
+JUP_ULTRA_MIN_INTERVAL_MS=
+JUP_ULTRA_BACKOFF_MAX_ATTEMPTS=
+JUP_ULTRA_BACKOFF_BASE_MS=
+JUP_ULTRA_BACKOFF_MAX_MS=
 
 # OpenOcean (Titan via dexId=10; overridden in docker-compose.prod.yml)
 OPENOCEAN_ENABLED=false
