--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -15,6 +15,8 @@ services:
       EXECUTION_STRATEGY: atomic
       OPENOCEAN_ENABLED: "false"
       JITO_ENABLED: "true"
+      JUP_EXECUTION_PROVIDER: "swap"
+      JUP_USE_ULTRA: "false"
     volumes:
       - ./config.json:/app/config.json:ro
       - ./logs:/app/logs
@@ -26,11 +28,6 @@ services:
         max-size: "10m"
         max-file: "5"
 
-  # Optional (profile): Jupiter Ultra loop in sequential mode.
-  # Notes:
-  # - Requires `JUP_API_KEY` and `JUP_USE_ULTRA=true` (or set below).
-  # - Ultra requires pairs with `aMint=So111...` (SOL) and does not support triangular.
-  # - Do NOT run multiple services on the same pairs/wallet unless you want duplicate executions.
   jupiter-ultra-sequential:
     profiles: ["ultra"]
     build:
@@ -46,8 +43,42 @@ services:
       BOT_PROFILE: hft
       LOG_VERBOSE: "false"
       EXECUTION_STRATEGY: sequential
+      JUP_EXECUTION_PROVIDER: "ultra"
       JUP_USE_ULTRA: "true"
       OPENOCEAN_ENABLED: "false"
+      JITO_ENABLED: "false"
+    volumes:
+      - ./config.json:/app/config.json:ro
+      - ./logs:/app/logs
+    restart: unless-stopped
+    stop_grace_period: 30s
+    logging:
+      driver: json-file
+      options:
+        max-size: "10m"
+        max-file: "5"
+
+  # Dual mode: scan via Quote API + execute via Ultra, with OpenOcean enabled as a parallel provider.
+  # This keeps Ultra requests low (orders only on execution), while still allowing Titan/OpenOcean to win when it's better.
+  ultra-dual-sequential:
+    profiles: ["dual"]
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: prime-aggregator:local
+    init: true
+    env_file:
+      - .env.production
+    environment:
+      CONFIG_PATH: /app/config.json
+      LOG_PATH: /app/logs/events.dual.jsonl
+      BOT_PROFILE: hft
+      LOG_VERBOSE: "false"
+      EXECUTION_STRATEGY: sequential
+      JUP_EXECUTION_PROVIDER: "ultra"
+      OPENOCEAN_ENABLED: "true"
+      OPENOCEAN_MIN_INTERVAL_MS: "1200"
+      OPENOCEAN_EVERY_N_TICKS: "2"
       JITO_ENABLED: "false"
     volumes:
       - ./config.json:/app/config.json:ro
@@ -76,6 +107,8 @@ services:
       EXECUTION_STRATEGY: sequential
       PAIR_CONCURRENCY: "1"
       JITO_ENABLED: "false"
+      JUP_EXECUTION_PROVIDER: "swap"
+      JUP_USE_ULTRA: "false"
       OPENOCEAN_ENABLED: "true"
       OPENOCEAN_ENABLED_DEX_IDS: "10"
       OPENOCEAN_MIN_INTERVAL_MS: "1200"
