feat: enhance docker-compose setup with profiles for atomic and titan services, and normalize HTTP base URLs in environment configuration

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,5 +1,6 @@
 services:
   jupiter-atomic:
+    profiles: ["atomic"]
     build:
       context: .
       dockerfile: Dockerfile
@@ -92,6 +93,7 @@ services:
         max-file: "5"
 
   openocean-sequential:
+    profiles: ["titan"]
     build:
       context: .
       dockerfile: Dockerfile
