feat: enhance trading loops and implement circuit breaker for rate limiting
- Updated config.example.json to add new trading loops for SOL/CBBTC and SOL/JUP with adjusted parameters.
- Refactored executor.ts to integrate a circuit breaker mechanism for handling HTTP 429 errors from providers, ensuring smoother execution and logging of rate limits.
- Enhanced loop.ts and scanner.ts to support state management for pair scanning and execution, including cooldowns for Jupiter and OpenOcean.
- Introduced a new circuitBreaker.ts module to manage rate limiting logic across different providers.
- Updated env.ts to include configuration for fee conversion cache TTL and cooldowns for Jupiter and OpenOcean.

--- a/.env.example
+++ b/.env.example
@@ -53,8 +53,11 @@ RENT_BUFFER_LAMPORTS=0
 COMPUTE_UNIT_LIMIT=1400000
 COMPUTE_UNIT_PRICE_MICRO_LAMPORTS=0
 QUOTE_CACHE_TTL_MS=250
+FEE_CONVERSION_CACHE_TTL_MS=60000
 LUT_CACHE_TTL_MS=60000
 PAIR_CONCURRENCY=2
+# Spreads pair scans across `POLL_INTERVAL_MS` to avoid bursty HTTP (recommended)
+PAIR_SCHEDULER_SPREAD=true
 MIN_BALANCE_LAMPORTS=0
 MAX_ERRORS_BEFORE_EXIT=0
 MAX_CONSECUTIVE_ERRORS_BEFORE_EXIT=0
@@ -91,6 +94,8 @@ JUP_EXECUTION_PROVIDER=swap
 # Backward-compat: if true, implies `JUP_EXECUTION_PROVIDER=ultra` (prefer the var above)
 JUP_USE_ULTRA=false
 JUP_MIN_INTERVAL_MS=150
+# Per-pair circuit breaker cooldown when hitting HTTP 429
+JUP_429_COOLDOWN_MS=30000
 JUP_BACKOFF_MAX_ATTEMPTS=4
 JUP_BACKOFF_BASE_MS=250
 JUP_BACKOFF_MAX_MS=5000
@@ -108,6 +113,8 @@ OPENOCEAN_BASE_URL=https://open-api.openocean.finance/v4/solana
 OPENOCEAN_API_KEY=
 OPENOCEAN_GAS_PRICE=5
 OPENOCEAN_MIN_INTERVAL_MS=1200
+# Per-pair circuit breaker cooldown when hitting HTTP 429 / bans
+OPENOCEAN_429_COOLDOWN_MS=60000
 OPENOCEAN_SIGNATURES_ESTIMATE=3
 # NOTE: OpenOcean execution requires EXECUTION_STRATEGY=sequential
 # Optional: restrict OpenOcean routing by dex index (see `/v4/solana/dexList`; eg Jupiter=6, Titan=10)
@@ -120,6 +127,8 @@ OPENOCEAN_OBSERVE_ENABLED=false
 OPENOCEAN_EXECUTE_ENABLED=true
 OPENOCEAN_EVERY_N_TICKS=2
 OPENOCEAN_JUPITER_GATE_BPS=-250
+# Only query OpenOcean when Jupiter best is within [gate, gate+near] bps (set 0 to disable)
+OPENOCEAN_JUPITER_NEAR_GATE_BPS=50
 
 # Optional hybrid mode: use Rust decision engine (requires building `rust/arb_calc`)
 USE_RUST_CALC=false
