--- a/.env.production.example
+++ b/.env.production.example
@@ -69,10 +69,13 @@ COMPUTE_UNIT_PRICE_MICRO_LAMPORTS=0
 
 # Cache
 QUOTE_CACHE_TTL_MS=250
+FEE_CONVERSION_CACHE_TTL_MS=60000
 LUT_CACHE_TTL_MS=60000
 
 # Concurrency
-PAIR_CONCURRENCY=4
+PAIR_CONCURRENCY=3
+# Spreads pair scans across `POLL_INTERVAL_MS` to avoid bursty HTTP (recommended)
+PAIR_SCHEDULER_SPREAD=true
 
 # Jito (recommended for `jupiter-atomic`; overridden in docker-compose.prod.yml)
 JITO_ENABLED=false
@@ -103,6 +106,8 @@ JUP_EXECUTION_PROVIDER=swap
 # Backward-compat: if true, implies `JUP_EXECUTION_PROVIDER=ultra` (prefer the var above)
 JUP_USE_ULTRA=false
 JUP_MIN_INTERVAL_MS=150
+# Per-pair circuit breaker cooldown when hitting HTTP 429
+JUP_429_COOLDOWN_MS=30000
 JUP_BACKOFF_MAX_ATTEMPTS=4
 JUP_BACKOFF_BASE_MS=250
 JUP_BACKOFF_MAX_MS=5000
@@ -118,6 +123,8 @@ OPENOCEAN_BASE_URL=https://open-api.openocean.finance/v4/solana
 OPENOCEAN_API_KEY=
 OPENOCEAN_GAS_PRICE=5
 OPENOCEAN_MIN_INTERVAL_MS=1200
+# Per-pair circuit breaker cooldown when hitting HTTP 429 / bans
+OPENOCEAN_429_COOLDOWN_MS=60000
 OPENOCEAN_SIGNATURES_ESTIMATE=3
 OPENOCEAN_ENABLED_DEX_IDS=10
 OPENOCEAN_DISABLED_DEX_IDS=
@@ -127,6 +134,8 @@ OPENOCEAN_OBSERVE_ENABLED=false
 OPENOCEAN_EXECUTE_ENABLED=true
 OPENOCEAN_EVERY_N_TICKS=2
 OPENOCEAN_JUPITER_GATE_BPS=-50
+# Only query OpenOcean when Jupiter best is within [gate, gate+near] bps (set 0 to disable)
+OPENOCEAN_JUPITER_NEAR_GATE_BPS=50
 
 # Optional hybrid mode: use Rust decision engine (requires building `rust/arb_calc`)
 USE_RUST_CALC=false
