--- a/config.example.json
+++ b/config.example.json
@@ -4,13 +4,48 @@
       "name": "SOL/USDC loop",
       "aMint": "So11111111111111111111111111111111111111112",
       "bMint": "EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v",
-      "amountA": "1000000",
-      "amountASteps": ["500000", "1000000", "2000000"],
+      "amountA": "50000000",
+      "amountASteps": ["10000000", "20000000", "50000000"],
       "slippageBps": 50,
       "slippageBpsLeg2": 100,
       "minProfitA": "0",
       "minProfitBps": 25,
       "cooldownMs": 1500,
+      "maxNotionalA": "50000000",
+      "computeUnitLimit": 1400000,
+      "computeUnitPriceMicroLamports": 0,
+      "baseFeeLamports": 5000,
+      "rentBufferLamports": 0
+    },
+    {
+      "name": "SOL/CBBTC loop",
+      "aMint": "So11111111111111111111111111111111111111112",
+      "bMint": "cbbtcf3aa214zXHbiAZQwf4122FBYbraNdFqgw4iMij",
+      "amountA": "50000000",
+      "amountASteps": ["10000000", "20000000", "50000000"],
+      "slippageBps": 50,
+      "slippageBpsLeg2": 100,
+      "minProfitA": "0",
+      "minProfitBps": 25,
+      "cooldownMs": 1500,
+      "maxNotionalA": "50000000",
+      "computeUnitLimit": 1400000,
+      "computeUnitPriceMicroLamports": 0,
+      "baseFeeLamports": 5000,
+      "rentBufferLamports": 0
+    },
+    {
+      "name": "SOL/JUP loop",
+      "aMint": "So11111111111111111111111111111111111111112",
+      "bMint": "JUPyiwrYJFskUPiHa7hkeR8VUtAeFoSYbKedZNsDvCN",
+      "amountA": "50000000",
+      "amountASteps": ["10000000", "20000000", "50000000"],
+      "slippageBps": 50,
+      "slippageBpsLeg2": 100,
+      "minProfitA": "0",
+      "minProfitBps": 25,
+      "cooldownMs": 1500,
+      "maxNotionalA": "50000000",
       "computeUnitLimit": 1400000,
       "computeUnitPriceMicroLamports": 0,
       "baseFeeLamports": 5000,
