feat: add health check and dynamic amount handling
- Implement health check for services in docker-compose with a healthcheck section.
- Introduce dynamic amount mode for trading based on SOL balance in the bot's execution logic.
- Enhance error handling and logging for transaction confirmations in the executor.
- Add adaptive token bucket rate limiter for managing request rates to Jupiter and OpenOcean APIs.
- Create a balance cache to optimize balance fetching from the Solana blockchain.
- Update environment variables to support new features and configurations.

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,15 @@ MODE=dry-run
 BOT_PROFILE=default
 CONFIG_PATH=./config.json
 POLL_INTERVAL_MS=500
+HEALTHCHECK_PORT=0
+BALANCE_REFRESH_MS=2000
+
+# Dynamic amountA (optional; only applies when pair.aMint == SOL)
+# Uses wallet SOL balance (minus MIN_BALANCE_LAMPORTS) * (bps/10000) as amountA override.
+DYNAMIC_AMOUNT_A_MODE=off
+DYNAMIC_AMOUNT_A_BPS=0
+DYNAMIC_AMOUNT_A_MIN_ATOMIC=0
+DYNAMIC_AMOUNT_A_MAX_ATOMIC=0
 EXECUTION_STRATEGY=atomic
 # NOTE:
 # - OpenOcean execution requires `EXECUTION_STRATEGY=sequential`
@@ -34,6 +43,10 @@ DRY_RUN_BUILD=true
 DRY_RUN_SIMULATE=false
 DRY_RUN_INCLUDE_JITO_TIP=false
 LIVE_PREFLIGHT_SIMULATE=true
+
+# Advanced: sequential confirmation (mainly affects Ultra/OpenOcean sequential)
+SEQUENTIAL_CONFIRM_MAX_ATTEMPTS=4
+SEQUENTIAL_CONFIRM_BASE_DELAY_MS=200
 PRIORITY_FEE_STRATEGY=off
 PRIORITY_FEE_LEVEL=recommended
 PRIORITY_FEE_REFRESH_MS=1000
@@ -94,6 +107,9 @@ JUP_EXECUTION_PROVIDER=swap
 # Backward-compat: if true, implies `JUP_EXECUTION_PROVIDER=ultra` (prefer the var above)
 JUP_USE_ULTRA=false
 JUP_MIN_INTERVAL_MS=150
+JUP_RPS=
+JUP_BURST=1
+JUP_ADAPTIVE_PENALTY_MS=120000
 # Per-pair circuit breaker cooldown when hitting HTTP 429
 JUP_429_COOLDOWN_MS=30000
 JUP_BACKOFF_MAX_ATTEMPTS=4
@@ -113,6 +129,9 @@ OPENOCEAN_BASE_URL=https://open-api.openocean.finance/v4/solana
 OPENOCEAN_API_KEY=
 OPENOCEAN_GAS_PRICE=5
 OPENOCEAN_MIN_INTERVAL_MS=1200
+OPENOCEAN_RPS=
+OPENOCEAN_BURST=2
+OPENOCEAN_ADAPTIVE_PENALTY_MS=180000
 # Per-pair circuit breaker cooldown when hitting HTTP 429 / bans
 OPENOCEAN_429_COOLDOWN_MS=60000
 OPENOCEAN_SIGNATURES_ESTIMATE=3
