--- a/.env.production.example
+++ b/.env.production.example
@@ -12,6 +12,15 @@ MODE=live
 BOT_PROFILE=hft
 CONFIG_PATH=/app/config.json
 POLL_INTERVAL_MS=200
+HEALTHCHECK_PORT=0
+BALANCE_REFRESH_MS=2000
+
+# Dynamic amountA (optional; only applies when pair.aMint == SOL)
+# Uses wallet SOL balance (minus MIN_BALANCE_LAMPORTS) * (bps/10000) as amountA override.
+DYNAMIC_AMOUNT_A_MODE=off
+DYNAMIC_AMOUNT_A_BPS=0
+DYNAMIC_AMOUNT_A_MIN_ATOMIC=0
+DYNAMIC_AMOUNT_A_MAX_ATOMIC=0
 
 # Execution (defaults; overridden per-service in docker-compose.prod.yml)
 EXECUTION_STRATEGY=atomic
@@ -34,6 +43,9 @@ TRIGGER_MAX_AMOUNTS_PER_TICK=1
 
 # Safety
 LIVE_PREFLIGHT_SIMULATE=true
+# Advanced: sequential confirmation (mainly affects Ultra/OpenOcean sequential)
+SEQUENTIAL_CONFIRM_MAX_ATTEMPTS=4
+SEQUENTIAL_CONFIRM_BASE_DELAY_MS=200
 # Recomenda-se: `amountA` + buffer de fees/rent (ex: se `amountA=50000000` (~0.05 SOL), use >= `60000000`).
 MIN_BALANCE_LAMPORTS=60000000
 MAX_CONSECUTIVE_ERRORS_BEFORE_EXIT=25
@@ -106,6 +118,9 @@ JUP_EXECUTION_PROVIDER=swap
 # Backward-compat: if true, implies `JUP_EXECUTION_PROVIDER=ultra` (prefer the var above)
 JUP_USE_ULTRA=false
 JUP_MIN_INTERVAL_MS=150
+JUP_RPS=1
+JUP_BURST=1
+JUP_ADAPTIVE_PENALTY_MS=120000
 # Per-pair circuit breaker cooldown when hitting HTTP 429
 JUP_429_COOLDOWN_MS=30000
 JUP_BACKOFF_MAX_ATTEMPTS=4
@@ -123,6 +138,9 @@ OPENOCEAN_BASE_URL=https://open-api.openocean.finance/v4/solana
 OPENOCEAN_API_KEY=
 OPENOCEAN_GAS_PRICE=5
 OPENOCEAN_MIN_INTERVAL_MS=1200
+OPENOCEAN_RPS=2
+OPENOCEAN_BURST=2
+OPENOCEAN_ADAPTIVE_PENALTY_MS=180000
 # Per-pair circuit breaker cooldown when hitting HTTP 429 / bans
 OPENOCEAN_429_COOLDOWN_MS=60000
 OPENOCEAN_SIGNATURES_ESTIMATE=3
